# ITS-Bridge

./: README.md
certs/: server.key  server.pem
etc/: client.conf  server.conf  webserver.conf
include/: its_bridge_client.h  utils.h
objs/: CMakeLists.txt  deinstall.cmake.in  its_bridge_clientConfig.cmake.in  its_bridge_serverConfig.cmake.in  its_web_server_configConfig.cmake.in
scripts/: install.sh  its_bridge_client.service  its_bridge_client.sh  its_bridge_server.service  its_bridge_server.sh  its_bridge_webserver.service  its_bridge_webserver.sh  openfortivpn.service  openfortivpn.sh
src/: its_bridge_client.c  its_bridge_server.c  its_web_server_config.c  utils.c
